# Angry_Chess

./: 3dchess.blend  CMakeLists.txt  README.md
app/: main.cpp  sdl_main.cpp
chess/: AngryChessPlugin.cpp  CMakeLists.txt  ChessPieceTypes.hpp  FenParser.hpp
chess/ai/StockfishAI/: StockfishAI.cpp  StockfishAI.hpp
chess/notation/Fen/: FenParser.cpp  FenParser.hpp
chess/notation/Pgn/: PgnLogger.hpp
chess/pieces/Bishop/: Bishop.cpp
chess/pieces/King/: King.cpp
chess/pieces/Knight/: Knight.cpp
chess/pieces/Pawn/: Pawn.cpp  Pawn.hpp
chess/pieces/Queen/: Queen.cpp  Queen.hpp
chess/pieces/Rook/: Rook.cpp
chess/rules/: CheckDetector.cpp  CheckDetector.hpp  ChessRules.cpp  ChessRules.hpp
chess/rules/movement/: CastlingRule.cpp  CastlingRule.hpp
chess/rules/win/: ChessWinCondition.cpp  ChessWinCondition.hpp
chess/theme/: AngryTheme.hpp  ClassicTheme.hpp
engine/: CMakeLists.txt
engine/ai/: IAIPlayer.hpp  MinimaxAI.cpp  MinimaxAI.hpp  RandomAI.cpp  RandomAI.hpp
engine/board/: BoardState.cpp  BoardState.hpp  IBoard.hpp  SquareColor.hpp
engine/core/: EventBus.hpp  GameEngine.cpp  GameEngine.hpp  PgnLogger.hpp  PluginRegistry.cpp  PluginRegistry.hpp  Types.hpp
engine/input/: ConsoleInputHandler.cpp  ConsoleInputHandler.hpp  IInputHandler.hpp  InputEvent.hpp  SDL2InputHandler.cpp  SDL2InputHandler.hpp
engine/pieces/: IPiece.hpp  PieceRegistry.hpp  PieceSet.hpp
engine/renderer/: ConsoleRenderer.cpp  ConsoleRenderer.hpp  IRenderer.hpp  NullRenderer.hpp  SDL2Renderer.cpp  SDL2Renderer.hpp
engine/rules/: IGameRules.hpp  IMoveValidator.hpp  IWinCondition.hpp  Move.hpp  MoveResult.hpp
engine/statemachine/: GameStateMachine.cpp  GameStateMachine.hpp  IGameState.hpp  States.hpp
engine/theme/: DefaultTheme.hpp  ITheme.hpp  ThemeRegistry.hpp
games/angry_chess/: AngryChessPlugin.cpp  AngryChessPlugin.hpp  CMakeLists.txt  FenParser.cpp  FenParser.hpp
games/angry_chess/ai/: ChessEvaluator.cpp  ChessEvaluator.hpp
games/angry_chess/pieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Queen.cpp  Rook.cpp  Rook.hpp
games/angry_chess/rules/: CastlingRule.cpp  CheckDetector.cpp  ChessRules.cpp  ChessRules.hpp  ChessWinCondition.cpp
games/angry_chess/theme/: AngryTheme.hpp  ClassicTheme.hpp
tests/: CMakeLists.txt
tests/angry_chess/: test_check_detection.cpp  test_chess_moves.cpp  test_fen.cpp  test_win_conditions.cpp
tests/engine/: test_board_state.cpp  test_event_bus.cpp
